--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-scripts": "5.0.1",
+    "react-use-googlelogin": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
